--- a/Day21/index.html
+++ b/Day21/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>SSA Jave/Javascript 12 Week Class - Team C</title>
+		<title>SSA Java/Javascript 12 Week Class - Team C</title>
 		<link rel="stylesheet" type="text/css" href="default.css">
 	</head>
 	<body>
-		<h1>SSA Jave/Javascript 12 Week Class - Team C</h1>
+		<h1>SSA Java/Javascript 12 Week Class - Team C</h1>
 		<h3>The Team C Java/Javascript Class</h3>
 		<div id="rightDiv">
 			<h3 class="heading">Things I Like About The Class:</h3>
