--- a/Day22/index.html
+++ b/Day22/index.html
@@ -4,11 +4,31 @@
 		<title>SSA Java/Javascript 12 Week Class - Team C</title>
 		<link rel="stylesheet" type="text/css" href="default.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				$('[data-toggle="tooltip"]').tooltip();
+			});
+		</script>
 	</head>
-	<body>
-		<h1 class="bg-danger">SSA Java/Javascript 12 Week Class - Team C</h1>
-		<h3 class="text-danger">The Team C Java/Javascript Class</h3>
-		<div id="rightDiv" class="bg-danger">
+	<body background="http://www.trbimg.com/img-52bcd721/turbine/bal-afp-getty-187604226-20131110/2048/2048x1365">
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#">SSA Java/Javascript 12 Week Class - Team C</a>
+				</div>
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a id="navAbout" href="#demo">About</a></li>
+					<li><a id="navHelp" href="#help">Help</a></li> 
+				</ul>
+			</div>
+		</nav>
+		<div id="demo" class="collapse in">
+			<h1 class="bg-danger">SSA Java/Javascript 12 Week Class - Team C</h1>
+			<h3 class="text-danger">The Team C Java/Javascript Class</h3>
+		</div>
+		<div id="right-div" class="bg-danger">
 			<h3 class="heading">Things I Like About The Class:</h3>
 			<ul>
 				<li>Learning useful Java, SQL, HTML, and CSS concepts</li>
@@ -16,7 +36,7 @@
 				<li>Very helpful teacher</li>
 			</ul>
 		</div>
-		<div id="leftDiv" class="bg-warning">
+		<div id="left-div" class="bg-warning">
 			<h3 class="heading">Things I Think Would Improve The Class:</h3>
 			<ul>
 				<li>More purple and/or Ravens themed ideas and projects</li>
@@ -28,11 +48,11 @@
 		<table class="table table-striped table-condensed">
 			<thead class="bg-info">
 				<tr>
-					<th>Picture:</th>
-					<th>Name:</th>
-					<th>Department:</th>
-					<th>Supervisor:</th>
-					<th>Start Date:</th>
+					<th><a href='#' data-toggle="tooltip" title="Student's Picture">Picture:</a></th>
+					<th><a href='#' data-toggle="tooltip" title="Student's Name">Name:</a></th>
+					<th><a href='#' data-toggle="tooltip" title="Department at SSA">Department:</a></th>
+					<th><a href='#' data-toggle="tooltip" title="Supervisor at SSA">Supervisor:</a></th>
+					<th><a href='#' data-toggle="tooltip" title="Start date with SSA">Start Date:</a></th>
 				</tr>
 			</thead>
 			<tr>
