--- a/Day22/index.html
+++ b/Day22/index.html
@@ -4,6 +4,7 @@
 		<title>SSA Java/Javascript 12 Week Class - Team C</title>
 		<link rel="stylesheet" type="text/css" href="default.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<script   src="http://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script>
 			$(document).ready(function(){
@@ -19,7 +20,7 @@
 				</div>
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a id="navAbout" href="#demo">About</a></li>
+					<li><a id="navAbout" href="#about">About</a></li>
 					<li><a id="navHelp" href="#help">Help</a></li> 
 				</ul>
 			</div>
